Resolves: tdf#105158 set date or time return type for DATEVALUE TIMEVALUE

... so adding/subtracting another date produces number of days instead of date,
and adding/subtracting a number produces date. But if used as the final
formula result force number type.

Change-Id: I046f5cc53d1fe8c9f6f71876787f2f19d24fe146
(cherry picked from commit b85ee27d9f8039a6442429587598426e73aeb1ba)
Reviewed-on: https://gerrit.libreoffice.org/33362
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>